<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="network_error">网络连接错误，请您检测当前网络设置</string>
    <string name="hello">Hello World, ClouDeskMainActivity!</string>
    <string name="app_name">ClouDesk</string>
    <string name="usernamepwd_login">ClouDesk登陆</string>
    <string name="username">用户名:  </string>
    <string name="password">密           码:  </string>
    <string name="instant_login">立即登陆</string>
    <string name="new_username_register">新用户注册</string>
    <string name="password_again">再次输入密码:</string>
    <string name="instant_resgister">立即注册</string>
    <string name="multiple_register">您输入的用户名已被注册，请重新输入！</string>
    <string name="welcome_msg_cloudesk">欢迎使用ClouDesk...请稍后...O(∩_∩)O~</string>
    <string name="username_or_password_error">您输入的用户名或密码不正确,请重新输入!</string>
    <string name="resgister_success">注册成功！您现在已可以使用该用户登录</string>
    <string name="workset_list">历史场景列表</string>
    <string name="restore">恢复</string>
    <string name="welcome_title">欢迎使用ClouDesk</string>
    <string name="windows_list">windows应用 </string>
    <string name="linux_list">linux应用 </string>
    <string name="loading_msg">载入中...请稍后...</string>
	<string name="show_details">查看记录>></string>
	<string name="main_customize">定制应用</string>
	<string name="main_gradesystem">评分系统</string>
	<string name="main_about">关于</string>
	<string name="main_exit">退出</string>
	<string name="about_tilte">关于本应用</string>
	<string name="customize_title">当前定制功能暂不可用</string>
	<string name="customize_content">个人数据初始化未完成，请待完成后即可使用此功能</string>
	<string name="exit_cancel">取消</string>
	<string name="exit_ok">确定</string>
	<string name="exit_title">退出软件</string>
	<string name="exit_confirm">确定退出ClouDesk?</string>
	
	<string name="activity_is_about_title">ClouDesk pad版</string>
    <string name="activity_is_about_content">欢迎使用！</string>
	<string name="commit_success">修改成功！</string>	
	
	<string name="measurement">评价指标</string>
	  <string name="working_condition_1">计划任务完成情况</string>
	  <string name="working_condition_2"> 数据共享与资料归档情况 </string>
	<string name="research_foreground_1">对项目总体目标的贡献</string>
	<string name="research_foreground_2">研究水平及创新性</string>
	<string name="research_foreground_3">研究队伍与人才培养</string>
	<string name="overall_evaluation">综合评分</string>
	
	
	
	
	<string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">Send Text</string>
    <string name="button_send_without_saving">Send Text/Don\'t Save It</string>
<string name="center_mouse">Mouse @</string>
<string name="close">Close</string>
<string name="color_format_caption">Color Format</string>
<string name="color_mode">Color Mode</string>
<string name="connect_button">Connect</string>
<string name="connection_caption">Connection</string>
<string name="control_check">Ctrl</string>
<string name="copy_list_button">Copy List</string>
<string name="ctrl_alt_del">Ctrl-Alt-Del</string>
<string name="delete_connection">Delete Connection</string>
<string name="delete_key">Delete Selected Key</string>
<string name="delete_key_list">Delete Key List</string>
<string name="disconnect">Disconnect</string>
<string name="export_settings">Export</string>
<string name="export_settings_path">Export to file</string>
<string name="enter_text_title">Enter Text to Send</string>
<string name="enter_text">Send text</string>
<string name="fit_to_screen">Fit to Screen</string>
<string name="force_full_check">Force full-screen bitmap</string>
<string name="import_export_settings">Import/Export Settings</string>
<string name="import_settings">Import</string>
<string name="import_settings_file_url">Import from file or URL</string>
<string name="info">Info</string>
<string name="intro_text">If you need help, please check the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/Documentation"&gt;manual&lt;/a&gt; (press phone\'s Menu button to access manual and other menu items), or the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/faq"&gt;FAQ&lt;/a&gt;.&lt;br&gt;</string>
<string name="intro_title">Welcome</string>
<string name="intro_version_text">&lt;br&gt;--Sent text is remembered across sessions (optionally)&lt;br&gt;--Import/Export settings to file&lt;br&gt;--Button with zoom controls to bring up keyboard&lt;br&gt;--Can force tiling mode (very large screens)</string>
<string name="input_mode">Input Mode</string>
<string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
<string name="input_mode_mouse">Mouse Pointer Control Mode</string>
<string name="input_mode_panning">Desktop Panning Mode</string>
<string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
<string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
<string name="input_mode_touch_pan_zoom_mouse">Touch Mouse Pan and Zoom</string>
<string name="input_mode_touchpad">Touchpad</string><string name="keep_password_button">Keep</string>
<string name="intro_dont_show">Don\'t show again</string>
<string name="keys_caption">Keys</string>
<string name="list_caption">List</string>
<string name="list_name_caption">List Name</string>
<string name="local_mouse_check">Local mouse pointer</string>
<string name="meta_key_title">Send Special Keys</string>
<string name="mouse_follow_pan">Mouse follow pan</string>
<string name="new_list_button">New List</string>
<string name="nickname_caption">Nickname</string>
<string name="off">Off</string>
<string name="on">On</string>
<string name="one_to_one">1:1</string>
<string name="open_doc">Manual/Wiki</string>
<string name="pan_follow_mouse">Pan Follows Mouse</string>
<string name="password_caption">Password</string>
<string name="port_caption">Port</string>
<string name="repeater_button">Repeater</string>
<string name="repeater_caption">Enter the repeater address &lt;b&gt;only if&lt;/b&gt; you are using an&lt;br&gt;&lt;i&gt;UltraVNC&lt;/i&gt;-type repeater</string>
<string name="repeater_clear">Don\'t use repeater</string>
<string name="repeater_dialog_title">Repeater Information</string>
<string name="repeater_empty_text">No repeater</string>
<string name="repeater_save">Use this repeater address</string>
<string name="save_as_copy">Save as Copy</string>
<string name="scaling">Scaling</string>
<string name="scaling_zoomable">Zoomable</string>
<!-- Send selected metakey -->
<string name="send_button">Send</string>
<string name="send_key_again">Send Key Again</string>
<string name="shift_check">Shift</string>
<string name="shortcut_label">VNC Connection</string>
<string name="showkbd_label">Keyboard</string>
<string name="special_keys">Send Keys</string>
<string name="username_caption">Username</string>
<string name="username_hint">For Windows Authentication</string>
<string name="error_lag_title">登录超时</string>
<string name="error_load_title">网络不稳定</string>
<string name="error_network_content">请检查网络设置，稍候再试</string>
<string name="button_login_text">登   录</string>
<string name="use_keyboard">KeyBoard</string>
<string name="button_login_forbidden_text">正在登录</string>

    <string name="folder_list">文件夹 </string>

    <string name="commit_btn">提交</string>

    <string name="reset_btn">重置</string>

    <string name="customize_list">用户定制列表</string>

    <string name="课题二">Pro2</string>

    <string name="Pro2">课题二</string>

    <string name="Pro3">课题三</string>

    <string name="Pro4">课题四</string>

    <string name="Pro5">课题五</string>

    <string name="initString">未评价</string>

    <string name="reset">重置</string>

    <string name="submit">提交</string>

    <string name="blank">       </string>

    <string name="record">打分记录表</string>

    <string name="issuename">课题名  </string>

    <string name="expertname">  评分人</string>

    <string name="score1">分值</string>

    <string name="score10">10</string>

    <string name="score20">20</string>

    <string name="score30">30</string>

    <string name="requirements">评分要求</string>

    <string name="requirement1">优秀[27-30]良好[24-27) 一般[18-24) 差(&lt;18)</string>

	<string name="requirement2">优秀[9-10]良好[8-9) 一般[6-8) 差(&lt;6)</string>
	
	<string name="requirement3">优秀[18-20]良好[16-18) 一般[12-16) 差(&lt;12)</string>
	
	<string name="requirement4">优秀[18-20]良好  [16-18) 一般[12-16) 差(&lt;12)</string>
	
	<string name="requirement5">优秀[18-20]良好  [16-18) 一般[12-16) 差(&lt;12)</string>
	
	<string name="Remarks">备注：优秀[90-100]  良好[80-90） 一般[60-80） 差 低于60分</string>
	
	<string name="welcome">热烈欢迎各位专家莅临指导！</string>
	
	<string name= "error_lag_app_title">Warning</string>
	
	<string name= "error_lag_app_content">连接超时，请稍后再试</string>
</resources>
