<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical" android:background="@drawable/defaultbackgroud">
	<TextView
		android:id="@+id/cloudesk_userpswlogin_txt"
		android:paddingTop="80px"
		android:layout_width="fill_parent"
		android:textSize="40dip"
		android:gravity="center_horizontal"
		android:text="@string/usernamepwd_login" 
		android:layout_height="wrap_content"
		android:textColor="#000000"/>
	<LinearLayout
		android:paddingTop="110px"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical">
		<LinearLayout android:id="@+id/linearLayout4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal"  android:orientation="horizontal">
			<TextView android:paddingBottom="40px" android:textColor="#000000" android:text="@string/username" android:textSize="25dip" android:layout_width="120px" android:layout_height="wrap_content" android:gravity="center" android:id="@+id/cloudesk_username_txt"></TextView>
			<EditText  android:gravity="left" android:text="" android:maxLines="1" android:layout_width="300px" android:layout_height="50px" android:textSize="25dip" android:singleLine="true" android:textColor="#000000" android:id="@+id/cloudesk_username_edt" android:maxLength="18"></EditText>
		</LinearLayout>
		<LinearLayout   android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:paddingTop="40px" android:orientation="horizontal">
				<TextView  android:paddingBottom="40px" android:textColor="#000000" android:text="@string/password" android:textSize="25dip" android:layout_width="120px" android:layout_height="wrap_content" android:gravity="center" android:id="@+id/cloudesk_password_txt"></TextView>
				<EditText  android:clickable="true" android:gravity="left" android:text="" android:layout_width="300px" android:password="true" android:layout_height="50px" android:textSize="20dip" android:singleLine="true" android:textColor="#000000" android:id="@+id/cloudesk_password_edt" android:maxLength="20"></EditText>
			
		</LinearLayout>
	</LinearLayout>



	<LinearLayout
		android:paddingTop="80px"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:layout_height="wrap_content">
			<LinearLayout 
				android:layout_width="wrap_content" 
				android:layout_height="match_parent">
				<Button 
					android:gravity="center" 
					android:textSize="25dip" 
					android:layout_width="160px" 
					android:text="@string/instant_login" 
					android:id="@+id/cloudesk_instant_login_btn" 
					android:layout_height="60px">
				</Button>
			</LinearLayout>
			<LinearLayout 
				android:layout_width="wrap_content" 
				android:layout_height="match_parent"
				android:paddingLeft="100px">
				<Button 
					android:gravity="center" 
					android:textSize="25dip" 
					android:layout_width="160px" 
					android:text="@string/new_username_register" 
					android:id="@+id/new_register_btn" 
					android:layout_height="60px">
				</Button>
			</LinearLayout>
	</LinearLayout>
</LinearLayout>
