<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/defaultbackgroud">
	<TextView
		android:id="@+id/cloudesk_register_txt"
		android:paddingTop="30px"
		android:layout_width="fill_parent"
		android:textSize="30dip"
		android:gravity="center_horizontal"
		android:text="@string/new_username_register"  
		android:layout_height="wrap_content"
		android:textColor="#000000"/>
	<LinearLayout
		android:paddingTop="20px"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:paddingLeft="360px"
			android:paddingTop="100px"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<TextView
				android:id="@+id/regsister_username_txt"
				android:layout_width="130px"
				android:layout_height="wrap_content"
				android:textSize="25dip"
				android:gravity="center_horizontal"
				android:text="@string/username" 
				android:textColor="#000000"/>
			<EditText android:text="" android:clickable="true" android:gravity="left" android:layout_width="300px" android:layout_height="wrap_content" android:textSize="20dip" android:singleLine="true" android:textColor="#000000" android:id="@+id/regsister_username_edt" android:maxLength="20"></EditText>
		</LinearLayout>
	

	<LinearLayout
		android:paddingTop="20px"
		android:paddingLeft="360px"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="10px" android:orientation="horizontal">

		<TextView
			
			android:id="@+id/regsiter_password_txt"
			android:layout_width="130px"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:gravity="center_horizontal"
			android:textSize="25dip"
			android:text="@string/password" 
			android:textColor="#000000"/>

		<EditText
			android:id="@+id/regsiter_password_edt"
			android:layout_width="300px"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textSize="15dip"
			android:gravity="left"
			android:maxLength="20"
			android:clickable="true"
			android:singleLine="true"
			android:password="true" 
			android:textColor="#000000"/>
	</LinearLayout>


	<LinearLayout
		android:paddingTop="40dip"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_gravity="center">
		<Button
			android:gravity="center"
			android:layout_width="160px"
			android:layout_height="60px"
			android:textSize="25dip"
			android:text="@string/instant_resgister" android:id="@+id/instant_register_btn"/>

	</LinearLayout>
</LinearLayout>
</LinearLayout>
