<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/defaultbackgroud">
    <LinearLayout android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView 
        android:textColor="#000000"
        android:paddingTop="10px"
		android:textSize="40dip"
		android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/customize_list_txt" android:text="@string/customize_list">
		</TextView>
    </LinearLayout>
    <ListView android:scrollbars="vertical"
			android:smoothScrollbar="true" 
			android:layout_width="match_parent" 
			android:id="@+id/customize_listview" 
			android:layout_height="460dip"
			android:cacheColorHint="#00000000" 
			 ></ListView>
    <RelativeLayout android:id="@+id/relativeLayout" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout 
        android:paddingTop="40px"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10px" 
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:layout_gravity="center" android:orientation="horizontal">
        	<LinearLayout 
				android:layout_width="wrap_content" 
				android:layout_height="match_parent">
				<Button 
					android:gravity="center" 
					android:textSize="20dip" 
					android:layout_width="160px" 
					android:layout_height="60px" android:id="@+id/commit_btn" android:text="@string/commit_btn">
				</Button>
			</LinearLayout>
			<LinearLayout 
				android:layout_width="wrap_content" 
				android:layout_height="match_parent"
				android:paddingLeft="100px">
				<Button 
					android:gravity="center" 
					android:textSize="20dip" 
					android:layout_width="160px" 
					android:layout_height="60px" android:id="@+id/reset_btn" android:text="@string/reset_btn">
				</Button>
			</LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
