<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/defaultbackgroud" android:id="@+id/rootLayout">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout">
        <TextView android:paddingTop="10px"
		android:textSize="30dip"
		android:gravity="center_horizontal" 
		android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/welcome_title_txt" android:text="@string/welcome_title" android:textColor="#000000">
		</TextView>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/mainscrollView">
        <LinearLayout android:orientation="vertical" android:gravity="center" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/mainLayout">
            <LinearLayout android:id="@+id/linearLayout1" android:gravity="center" android:layout_width="match_parent" android:background="@drawable/titlebackgroud" android:layout_height="30dip">
                <TextView android:textSize="20dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:id="@+id/TextView" android:text="@string/windows_list" android:gravity="center"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/windows_login_progressbar" android:gravity="center" android:layout_width="wrap_content" android:layout_gravity="center" android:paddingTop="20dip" android:paddingBottom="10dip">
                <ProgressBar android:layout_height="60dip" android:layout_width="60dip" style="\@style/qZoneListProgressStyle" android:indeterminateOnly="true" android:id="@android:attr/theme"></ProgressBar>
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:id="@+id/loading" android:layout_gravity="center" android:textSize="18dip" android:text="@string/loading_msg" android:gravity="center"></TextView>
            </LinearLayout>
<!--             <GridView android:layout_height="wrap_content" android:id="@+id/windows_grid" android:paddingTop="10dp" android:layout_width="fill_parent" android:gravity="center_horizontal" android:verticalSpacing="20dip" android:stretchMode="columnWidth" android:columnWidth="80dp" android:numColumns="8"></GridView> -->
            <LinearLayout android:id="@+id/linearLayout2" android:gravity="center" android:layout_width="match_parent" android:background="@drawable/titlebackgroud" android:layout_height="30dip">
                <TextView  android:textSize="20dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:id="@+id/TextView" android:text="@string/linux_list" android:gravity="center"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linux_login_progressbar" android:gravity="center" android:layout_width="wrap_content" android:layout_gravity="center" android:paddingTop="20dip" android:paddingBottom="10dip">
                <ProgressBar android:layout_height="60dip" android:layout_width="60dip"  style="\@style/qZoneListProgressStyle" android:indeterminateOnly="true" android:id="@android:attr/theme"></ProgressBar>
                <TextView  android:textSize="18dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:id="@+id/loading" android:layout_gravity="center" android:text="@string/loading_msg" android:gravity="center"></TextView>
            </LinearLayout>
<!--             <GridView android:layout_height="wrap_content" android:id="@+id/linux_grid" android:paddingTop="10dp" android:layout_width="wrap_content" android:gravity="center_horizontal" android:verticalSpacing="20dip" android:stretchMode="columnWidth" android:columnWidth="80dp" android:numColumns="8"></GridView> -->
            <LinearLayout android:id="@+id/linearLayout2" android:gravity="center" android:layout_width="match_parent" android:background="@drawable/titlebackgroud" android:layout_height="30dip">
                <TextView android:textSize="20dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#000000" android:id="@+id/TextView" android:text="@string/folder_list" android:gravity="center"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/folder_login_progressbar" android:gravity="center" android:layout_width="wrap_content" android:layout_gravity="center" android:paddingTop="20dip" android:paddingBottom="10dip">
                <ProgressBar android:layout_height="60dip" android:layout_width="60dip"  android:id="@android:attr/theme"></ProgressBar>
                <TextView  android:textSize="18dip" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content"  android:id="@+id/loading" android:layout_gravity="center"  android:text="@string/loading_msg" android:gravity="center"></TextView>
                <TextView android:paddingTop="40px" android:gravity="center" android:layout_height="wrap_content" android:typeface="monospace" android:layout_width="wrap_content" android:text="@string/welcome" android:textSize="60dip" android:id="@+id/welcomeText" android:textColor="#EA0000"></TextView>
            </LinearLayout>
<!--             <GridView android:layout_height="wrap_content" android:id="@+id/folder_grid" android:paddingTop="10dp" android:layout_width="fill_parent" android:gravity="center_horizontal" android:verticalSpacing="20dip" android:stretchMode="columnWidth" android:columnWidth="80dp" android:numColumns="8"></GridView> -->
        </LinearLayout>
        
    </ScrollView>
</LinearLayout>
